Gramatica Programa/GramProgParser.java
// Generated from GramProg.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GramProgParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMENTARIO=1, INCLUDE=2, FUNCION=3, BEGIN=4, END=5, DEVOLVER=6, TIPO_NUMERO=7, 
		TIPO_CADENA=8, TIPO_BOOL=9, TIPO_VOID=10, WHILE=11, IF=12, THEN=13, ENDIF=14, 
		ELSE=15, FOR=16, FLOAT=17, INT=18, ID=19, CADENA=20, ESC=21, ESPECIAL=22, 
		ASIG=23, PI=24, PD=25, CORCHIZ=26, CORCHD=27, FIN=28, WS=29, PUNTO=30, 
		DPUNTO=31, COMA=32, BARRAINV=33, DCOMILLAS=34, INTERG=35, DIF=36, IGUAL=37, 
		MENIG=38, MAYIG=39, MAYQ=40, MENQ=41, NEG=42, AND=43, OR=44, INC=45, DEC=46, 
		SUM=47, REST=48, MUL=49, DIV=50, MOD=51;
	public static final int
		RULE_prog = 0, RULE_include = 1, RULE_funcion = 2, RULE_defineFuncion = 3, 
		RULE_parametros = 4, RULE_bloqueFuncion = 5, RULE_bucle = 6, RULE_bloqueCodigoBucle = 7, 
		RULE_ifex = 8, RULE_bloqueCodigoIf = 9, RULE_forEx = 10, RULE_defineFor = 11, 
		RULE_bloqueCodigo = 12, RULE_sentencia = 13, RULE_declararYasignar = 14, 
		RULE_declaracion = 15, RULE_asignacion = 16, RULE_devolver = 17, RULE_llamadaFuncion = 18, 
		RULE_tipo = 19, RULE_expr = 20, RULE_numero = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "include", "funcion", "defineFuncion", "parametros", "bloqueFuncion", 
			"bucle", "bloqueCodigoBucle", "ifex", "bloqueCodigoIf", "forEx", "defineFor", 
			"bloqueCodigo", "sentencia", "declararYasignar", "declaracion", "asignacion", 
			"devolver", "llamadaFuncion", "tipo", "expr", "numero"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'include'", "'function'", "'begin'", "'end'", "'return'", 
			"'numero'", "'cadena'", "'booleano'", "'void'", "'while'", "'if'", "'then'", 
			"'endif'", "'else'", "'for'", null, null, null, null, null, null, "':='", 
			"'('", "')'", "'['", "']'", "';'", null, "'.'", "':'", "','", "'\\'", 
			"'\"'", "'?'", "'!='", "'=='", "'<='", "'>='", "'>'", "'<'", "'!'", "'&&'", 
			"'||'", "'++'", "'--'", "'+'", "'-'", "'*'", "'/'", "'%'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COMENTARIO", "INCLUDE", "FUNCION", "BEGIN", "END", "DEVOLVER", 
			"TIPO_NUMERO", "TIPO_CADENA", "TIPO_BOOL", "TIPO_VOID", "WHILE", "IF", 
			"THEN", "ENDIF", "ELSE", "FOR", "FLOAT", "INT", "ID", "CADENA", "ESC", 
			"ESPECIAL", "ASIG", "PI", "PD", "CORCHIZ", "CORCHD", "FIN", "WS", "PUNTO", 
			"DPUNTO", "COMA", "BARRAINV", "DCOMILLAS", "INTERG", "DIF", "IGUAL", 
			"MENIG", "MAYIG", "MAYQ", "MENQ", "NEG", "AND", "OR", "INC", "DEC", "SUM", 
			"REST", "MUL", "DIV", "MOD"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GramProg.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GramProgParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public List<IncludeContext> include() {
			return getRuleContexts(IncludeContext.class);
		}
		public IncludeContext include(int i) {
			return getRuleContext(IncludeContext.class,i);
		}
		public List<FuncionContext> funcion() {
			return getRuleContexts(FuncionContext.class);
		}
		public FuncionContext funcion(int i) {
			return getRuleContext(FuncionContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramProgListener ) ((GramProgListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramProgListener ) ((GramProgListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==INCLUDE || _la==FUNCION) {
				{
				setState(46);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case INCLUDE:
					{
					setState(44);
					include();
					}
					break;
				case FUNCION:
					{
					setState(45);
					funcion();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IncludeContext extends ParserRuleContext {
		public TerminalNode INCLUDE() { return getToken(GramProgParser.INCLUDE, 0); }
		public TerminalNode ID() { return getToken(GramProgParser.ID, 0); }
		public TerminalNode FIN() { return getToken(GramProgParser.FIN, 0); }
		public IncludeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_include; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramProgListener ) ((GramProgListener)listener).enterInclude(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramProgListener ) ((GramProgListener)listener).exitInclude(this);
		}
	}

	public final IncludeContext include() throws RecognitionException {
		IncludeContext _localctx = new IncludeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_include);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(INCLUDE);
			setState(52);
			match(ID);
			setState(53);
			match(FIN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncionContext extends ParserRuleContext {
		public DefineFuncionContext defineFuncion() {
			return getRuleContext(DefineFuncionContext.class,0);
		}
		public BloqueFuncionContext bloqueFuncion() {
			return getRuleContext(BloqueFuncionContext.class,0);
		}
		public FuncionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramProgListener ) ((GramProgListener)listener).enterFuncion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramProgListener ) ((GramProgListener)listener).exitFuncion(this);
		}
	}

	public final FuncionContext funcion() throws RecognitionException {
		FuncionContext _localctx = new FuncionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_funcion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			defineFuncion();
			setState(56);
			bloqueFuncion();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefineFuncionContext extends ParserRuleContext {
		public TerminalNode FUNCION() { return getToken(GramProgParser.FUNCION, 0); }
		public TerminalNode ID() { return getToken(GramProgParser.ID, 0); }
		public TerminalNode PI() { return getToken(GramProgParser.PI, 0); }
		public TerminalNode PD() { return getToken(GramProgParser.PD, 0); }
		public TerminalNode DPUNTO() { return getToken(GramProgParser.DPUNTO, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public ParametrosContext parametros() {
			return getRuleContext(ParametrosContext.class,0);
		}
		public DefineFuncionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defineFuncion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramProgListener ) ((GramProgListener)listener).enterDefineFuncion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramProgListener ) ((GramProgListener)listener).exitDefineFuncion(this);
		}
	}

	public final DefineFuncionContext defineFuncion() throws RecognitionException {
		DefineFuncionContext _localctx = new DefineFuncionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_defineFuncion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(FUNCION);
			setState(59);
			match(ID);
			setState(60);
			match(PI);
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TIPO_NUMERO) | (1L << TIPO_CADENA) | (1L << TIPO_BOOL) | (1L << TIPO_VOID))) != 0)) {
				{
				setState(61);
				parametros();
				}
			}

			setState(64);
			match(PD);
			setState(65);
			match(DPUNTO);
			setState(66);
			tipo();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametrosContext extends ParserRuleContext {
		public List<DeclaracionContext> declaracion() {
			return getRuleContexts(DeclaracionContext.class);
		}
		public DeclaracionContext declaracion(int i) {
			return getRuleContext(DeclaracionContext.class,i);
		}
		public List<TerminalNode> COMA() { return getTokens(GramProgParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(GramProgParser.COMA, i);
		}
		public ParametrosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametros; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramProgListener ) ((GramProgListener)listener).enterParametros(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramProgListener ) ((GramProgListener)listener).exitParametros(this);
		}
	}

	public final ParametrosContext parametros() throws RecognitionException {
		ParametrosContext _localctx = new ParametrosContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_parametros);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			declaracion();
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(69);
				match(COMA);
				setState(70);
				declaracion();
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BloqueFuncionContext extends ParserRuleContext {
		public TerminalNode BEGIN() { return getToken(GramProgParser.BEGIN, 0); }
		public BloqueCodigoContext bloqueCodigo() {
			return getRuleContext(BloqueCodigoContext.class,0);
		}
		public TerminalNode END() { return getToken(GramProgParser.END, 0); }
		public BloqueFuncionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloqueFuncion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramProgListener ) ((GramProgListener)listener).enterBloqueFuncion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramProgListener ) ((GramProgListener)listener).exitBloqueFuncion(this);
		}
	}

	public final BloqueFuncionContext bloqueFuncion() throws RecognitionException {
		BloqueFuncionContext _localctx = new BloqueFuncionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_bloqueFuncion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(BEGIN);
			setState(77);
			bloqueCodigo();
			setState(78);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BucleContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(GramProgParser.WHILE, 0); }
		public TerminalNode PI() { return getToken(GramProgParser.PI, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode PD() { return getToken(GramProgParser.PD, 0); }
		public BloqueCodigoBucleContext bloqueCodigoBucle() {
			return getRuleContext(BloqueCodigoBucleContext.class,0);
		}
		public BucleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bucle; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramProgListener ) ((GramProgListener)listener).enterBucle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramProgListener ) ((GramProgListener)listener).exitBucle(this);
		}
	}

	public final BucleContext bucle() throws RecognitionException {
		BucleContext _localctx = new BucleContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_bucle);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(WHILE);
			setState(81);
			match(PI);
			setState(82);
			expr(0);
			setState(83);
			match(PD);
			setState(84);
			bloqueCodigoBucle();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BloqueCodigoBucleContext extends ParserRuleContext {
		public TerminalNode BEGIN() { return getToken(GramProgParser.BEGIN, 0); }
		public BloqueCodigoContext bloqueCodigo() {
			return getRuleContext(BloqueCodigoContext.class,0);
		}
		public TerminalNode END() { return getToken(GramProgParser.END, 0); }
		public SentenciaContext sentencia() {
			return getRuleContext(SentenciaContext.class,0);
		}
		public BloqueCodigoBucleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloqueCodigoBucle; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramProgListener ) ((GramProgListener)listener).enterBloqueCodigoBucle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramProgListener ) ((GramProgListener)listener).exitBloqueCodigoBucle(this);
		}
	}

	public final BloqueCodigoBucleContext bloqueCodigoBucle() throws RecognitionException {
		BloqueCodigoBucleContext _localctx = new BloqueCodigoBucleContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_bloqueCodigoBucle);
		try {
			setState(93);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BEGIN:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(86);
				match(BEGIN);
				setState(87);
				bloqueCodigo();
				setState(88);
				match(END);
				}
				}
				break;
			case END:
			case DEVOLVER:
			case TIPO_NUMERO:
			case TIPO_CADENA:
			case TIPO_BOOL:
			case TIPO_VOID:
			case WHILE:
			case IF:
			case ENDIF:
			case ELSE:
			case FOR:
			case FLOAT:
			case INT:
			case ID:
			case CADENA:
			case PI:
			case FIN:
			case NEG:
				enterOuterAlt(_localctx, 2);
				{
				setState(91);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(90);
					sentencia();
					}
					break;
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfexContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(GramProgParser.IF, 0); }
		public TerminalNode PI() { return getToken(GramProgParser.PI, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode PD() { return getToken(GramProgParser.PD, 0); }
		public BloqueCodigoIfContext bloqueCodigoIf() {
			return getRuleContext(BloqueCodigoIfContext.class,0);
		}
		public IfexContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifex; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramProgListener ) ((GramProgListener)listener).enterIfex(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramProgListener ) ((GramProgListener)listener).exitIfex(this);
		}
	}

	public final IfexContext ifex() throws RecognitionException {
		IfexContext _localctx = new IfexContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_ifex);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(IF);
			setState(96);
			match(PI);
			setState(97);
			expr(0);
			setState(98);
			match(PD);
			setState(99);
			bloqueCodigoIf();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BloqueCodigoIfContext extends ParserRuleContext {
		public TerminalNode THEN() { return getToken(GramProgParser.THEN, 0); }
		public List<BloqueCodigoContext> bloqueCodigo() {
			return getRuleContexts(BloqueCodigoContext.class);
		}
		public BloqueCodigoContext bloqueCodigo(int i) {
			return getRuleContext(BloqueCodigoContext.class,i);
		}
		public TerminalNode ENDIF() { return getToken(GramProgParser.ENDIF, 0); }
		public TerminalNode ELSE() { return getToken(GramProgParser.ELSE, 0); }
		public BloqueCodigoIfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloqueCodigoIf; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramProgListener ) ((GramProgListener)listener).enterBloqueCodigoIf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramProgListener ) ((GramProgListener)listener).exitBloqueCodigoIf(this);
		}
	}

	public final BloqueCodigoIfContext bloqueCodigoIf() throws RecognitionException {
		BloqueCodigoIfContext _localctx = new BloqueCodigoIfContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_bloqueCodigoIf);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(THEN);
			setState(102);
			bloqueCodigo();
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(103);
				match(ELSE);
				setState(104);
				bloqueCodigo();
				}
			}

			setState(107);
			match(ENDIF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ForExContext extends ParserRuleContext {
		public DefineForContext defineFor() {
			return getRuleContext(DefineForContext.class,0);
		}
		public BloqueCodigoBucleContext bloqueCodigoBucle() {
			return getRuleContext(BloqueCodigoBucleContext.class,0);
		}
		public ForExContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forEx; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramProgListener ) ((GramProgListener)listener).enterForEx(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramProgListener ) ((GramProgListener)listener).exitForEx(this);
		}
	}

	public final ForExContext forEx() throws RecognitionException {
		ForExContext _localctx = new ForExContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_forEx);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			defineFor();
			setState(110);
			bloqueCodigoBucle();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefineForContext extends ParserRuleContext {
		public TerminalNode FOR() { return getToken(GramProgParser.FOR, 0); }
		public TerminalNode PI() { return getToken(GramProgParser.PI, 0); }
		public List<TerminalNode> FIN() { return getTokens(GramProgParser.FIN); }
		public TerminalNode FIN(int i) {
			return getToken(GramProgParser.FIN, i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode PD() { return getToken(GramProgParser.PD, 0); }
		public DeclararYasignarContext declararYasignar() {
			return getRuleContext(DeclararYasignarContext.class,0);
		}
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public DefineForContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defineFor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramProgListener ) ((GramProgListener)listener).enterDefineFor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramProgListener ) ((GramProgListener)listener).exitDefineFor(this);
		}
	}

	public final DefineForContext defineFor() throws RecognitionException {
		DefineForContext _localctx = new DefineForContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_defineFor);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(FOR);
			setState(113);
			match(PI);
			setState(116);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TIPO_NUMERO:
			case TIPO_CADENA:
			case TIPO_BOOL:
			case TIPO_VOID:
				{
				setState(114);
				declararYasignar();
				}
				break;
			case ID:
				{
				setState(115);
				asignacion();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(118);
			match(FIN);
			setState(119);
			expr(0);
			setState(120);
			match(FIN);
			setState(121);
			expr(0);
			setState(122);
			match(PD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BloqueCodigoContext extends ParserRuleContext {
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public BloqueCodigoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloqueCodigo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramProgListener ) ((GramProgListener)listener).enterBloqueCodigo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramProgListener ) ((GramProgListener)listener).exitBloqueCodigo(this);
		}
	}

	public final BloqueCodigoContext bloqueCodigo() throws RecognitionException {
		BloqueCodigoContext _localctx = new BloqueCodigoContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_bloqueCodigo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DEVOLVER) | (1L << TIPO_NUMERO) | (1L << TIPO_CADENA) | (1L << TIPO_BOOL) | (1L << TIPO_VOID) | (1L << WHILE) | (1L << IF) | (1L << FOR) | (1L << FLOAT) | (1L << INT) | (1L << ID) | (1L << CADENA) | (1L << PI) | (1L << FIN) | (1L << NEG))) != 0)) {
				{
				{
				setState(124);
				sentencia();
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenciaContext extends ParserRuleContext {
		public DeclararYasignarContext declararYasignar() {
			return getRuleContext(DeclararYasignarContext.class,0);
		}
		public TerminalNode FIN() { return getToken(GramProgParser.FIN, 0); }
		public DeclaracionContext declaracion() {
			return getRuleContext(DeclaracionContext.class,0);
		}
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public BucleContext bucle() {
			return getRuleContext(BucleContext.class,0);
		}
		public IfexContext ifex() {
			return getRuleContext(IfexContext.class,0);
		}
		public ForExContext forEx() {
			return getRuleContext(ForExContext.class,0);
		}
		public DevolverContext devolver() {
			return getRuleContext(DevolverContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public SentenciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencia; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramProgListener ) ((GramProgListener)listener).enterSentencia(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramProgListener ) ((GramProgListener)listener).exitSentencia(this);
		}
	}
